Changes from Colin, as per uploaded

--- a/academic/ifl2007/supero.bib
+++ b/academic/ifl2007/supero.bib
@@ -264,6 +264,9 @@
     booktitle = "Proc IFL '96",
     pages = "58--84",
     year = "1996",
+    series = "LNCS",
+    volume = "1268",
+    publisher = "Springer-Verlag",
 }
 
 
@@ -392,7 +395,7 @@
 
 @article{spj:inlining,
    author = {Simon {Peyton Jones} and Simon Marlow},
-   title = {Secrets of the Glasgow Haskell Compiler inliner},
+   title = {Secrets of the {G}lasgow {H}askell {C}ompiler inliner},
    journal = {JFP},
    year = {2002},
    month = {July},
@@ -407,6 +410,7 @@
     author = "Andrew Gill and John Launchbury and Simon {Peyton Jones}",
     month = "June",
     booktitle = "Proc FPCA '93",
+    publisher = "ACM Press",
 }
 
 @inproceedings{coutts:stream_fusion,
@@ -414,12 +418,13 @@
     title  = {Stream Fusion: From Lists to Streams to Nothing at All},
     booktitle = {Proc ICFP '07},
     year   = 2007,
+    publisher = {ACM Press},
     month  = apr,
 }
 
 @inproceedings{coutts:string_fusion,
     author = {Duncan Coutts and Don Stewart and Roman Leshchinskiy},
-    title  = {Rewriting Haskell Strings},
+    title  = {Rewriting {H}askell Strings},
     booktitle = {Proc PADL 2007},
     year   = 2007,
     month  = jan,
@@ -454,7 +459,7 @@
 
 @article{spj:stg,
     author = "Simon {Peyton Jones}",
-    title = "Implementing Lazy Functional Languages on Stock Hardware: The Spineless Tagless G-Machine",
+    title = "Implementing Lazy Functional Languages on Stock Hardware: The Spineless Tagless {G}-Machine",
     journal = "JFP",
     volume = "2",
     number = "2",
@@ -526,7 +531,7 @@
     location =      "Austin, Texas, United States",
     _doi =          "http://doi.acm.org/10.1145/75277.75283",
     publisher =     "ACM Press",
-    address =       "New York, NY, USA",
+    _address =       "New York, NY, USA",
     comment =       "The idea of type classes, along with the dictionary implementation"
 }
 
@@ -668,7 +673,7 @@
 @book{spj:implementation,
     author =        "Simon {Peyton Jones}",
     title =         "The Implementation of Functional Programming Languages",
-    publisher =     "Computer Science. Prentice-Hall",
+    publisher =     "Prentice-Hall",
     year =          "1987",
 }
 
