Add Colin's comments on the initial IFL paper

--- a/academic/ifl2007/supero.tex
+++ b/academic/ifl2007/supero.tex
@@ -19,6 +19,19 @@
 
 \begin{document}
 
+% COMMENTS FROM COLIN
+% to fix before post-proceedings
+%
+% More story - abstract - on 8 benchmarks
+% Intro - contributions
+% Figure on how to apply O, Fig 3 caption improvements
+% Reason for GHC increasing in wc benchmarks
+% More benchmarks - and larger
+% Related work - Dunstall 1981, Turin, Supercompilation
+% Ignore low-level optimisation
+% Specialisation, whole program
+% Termination - fix
+
 \title{Supero: Making Haskell Faster}
 
 \author{Neil Mitchell and Colin Runciman}
