Lots of changes to the paper, following the Oxford train rewrite

--- a/academic/post-ifl2007/supero.bib
+++ b/academic/post-ifl2007/supero.bib
@@ -269,7 +269,19 @@
     publisher = "Springer-Verlag",
 }
 
-
+@article{supercompilation,
+ author = {Valentin F. Turchin},
+ title = {The concept of a supercompiler},
+ journal = {ACM Trans. Program. Lang. Syst.},
+ volume = {8},
+ number = {3},
+ year = {1986},
+ issn = {0164-0925},
+ pages = {292--325},
+ _doi = {http://doi.acm.org/10.1145/5956.5957},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ }
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -337,6 +349,15 @@
     _doi =          "http://doi.acm.org/10.1145/1160074.1159811",
     publisher =     "ACM Press",
     _address =      "New York, NY, USA",
+}
+
+@inproceedings{spj:letfloating,
+    author = "Simon {Peyton Jones} and Will Partain and Andre Santos",
+    title = "Let-floating: Moving Bindings to Give Faster Programs",
+    booktitle = "Proc. ICFP '96",
+    pages = "1--12",
+    year = "1996",
+    publisher =     "ACM Press",
 }
 
 @inproceedings{wadler:deforestation,
@@ -515,6 +536,27 @@
     note =          "To appear",
     publisher =     "IEEE Computer Society",
     _address =      "Washington, DC, USA",
+}
+
+@inproceedings{me:supero_ifl,
+    author    = "Neil Mitchell and Colin Runciman",
+    title     = "Supero: Making {H}askell Faster",
+    year      = "2007",
+    month     = "September",
+    day       = "27",
+    booktitle = "Proc. IFL 2007"
+    _pdf       = "http://www-users.cs.york.ac.uk/\~{}ndm/downloads/paper-supero_making_haskell_faster-27_sep_2007.pdf",
+}
+
+
+@inproceedings{jonsson:supercompilation,
+    author    = "Peter A. Jonsson and Johan Nordlander",
+    title     = "Positive {S}upercompilation for a higher order call-by-value language",
+    year      = "2007",
+    month     = "September",
+    day       = "27",
+    booktitle = "Proc. IFL 2007"
+    _pdf       = "http://www-users.cs.york.ac.uk/\~{}ndm/downloads/paper-supero_making_haskell_faster-27_sep_2007.pdf",
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -828,6 +870,28 @@
     _address =      "New York, NY, USA",
 }
 
+@inproceedings{albert:partial_evaluation_curry,
+ author = {Elvira Albert and Mar\'{\i}a Alpuente and Michael Hanus and Germ\'{a}n Vidal},
+ title = {A Partial Evaluation Framework for Curry Programs},
+ booktitle = {LPAR '99: Proceedings of the 6th International Conference on Logic Programming and Automated Reasoning},
+ year = {1999},
+ isbn = {3-540-66492-0},
+ pages = {376--395},
+ publisher = {Springer-Verlag},
+ address = {London, UK},
+ }
+
+@article{leuschel:homeomorphic,
+ author = {Michael Leuschel},
+ title = {Homeomorphic embedding for online termination of symbolic methods},
+ book = {The essence of computation: complexity, analysis, transformation},
+ year = {2002},
+ isbn = {3-540-00326-6},
+ pages = {379--403},
+ publisher = {Springer-Verlag New York, Inc.},
+ address = {New York, NY, USA},
+ }
+
 @inproceedings{weirich:replib,
     author =        "Stephanie Weirich",
     title =         "{RepLib}: a library for derivable type classes",
@@ -1062,6 +1126,30 @@
   day =          "16",
 }
 
+@inproceedings{turchin:experiments,
+ author = {Valentin F. Turchin and Robert M. Nirenberg and Dimitri V. Turchin},
+ title = {Experiments with a supercompiler},
+ booktitle = {LFP '82: Proceedings of the 1982 ACM symposium on LISP and functional programming},
+ year = {1982},
+ isbn = {0-89791-082-6},
+ pages = {47--55},
+ location = {Pittsburgh, Pennsylvania, United States},
+ doi = {http://doi.acm.org/10.1145/800068.802134},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ }
+ 
+@inproceedings{turchin:generalisation,
+    author = {V F Turchin},
+    title = {The Algorithm of Generalization in the Supercompiler}
+    editors = {A. P. Ershov, D. Bj{\o}rner, N. D. Jones}
+    booktitle = {Partial Evaluation and Mixed Copmutation}
+    pages={341--353}
+    publisher = {North-Holland}
+    year = {1988}
+}
+
+
 @MastersThesis{term:terminator,
   author =       "Arne John Glenstrup",
   title =        "{T}erminatinator {I}{I}: {S}topping {P}artial
@@ -1096,6 +1184,28 @@
   ISBN =         "3-540-60360-3",
   pages =        "154--171",
   publisher =    "Springer--Verlag",
+}
+
+@inproceedings{sorensen:supercompilation,
+  author = "M. Heine S{\o}rensen and R. Gl{\"u}ck",
+  title = "An algorithm of generalization in positive supercompilation",
+  editor = "J.W. Lloyd", 
+  booktitle = "Logic Programming: Proceedings of the 1995 International Symposium",
+  pages = "465-479",
+  publisher = "MIT Press",
+  year = "1995",
+  url = "citeseer.ist.psu.edu/heine95algorithm.html" }
+
+@inproceedings{secher:perfect_supercompilation
+  AUTHOR = {Secher, Jens Peter and S{\o}rensen, Morten Heine B.},
+  YEAR = {2000},
+  TITLE = {On Perfect Supercompilation},
+  BOOKTITLE = {Proceedings of Perspectives of System Informatics},
+  editor = {Bj{\o}rner, D. and Broy, M. and Zamulin, A.},
+  publisher = {Springer-Verlag},
+  series = LNCS,
+  volume = 1755,
+  pages = {113--127},
 }
 
 @InProceedings{term:inductive,
