--- a/academic/post-ifl2007/supero.tex
+++ b/academic/post-ifl2007/supero.tex
@@ -16,6 +16,8 @@
     }
 \newcommand{\noexample}{\hfill$\Box$}
 
+\newcommand{\generalise}{\bowtie}
+
 
 \begin{document}
 
@@ -41,7 +43,7 @@
 \maketitle              % typeset the title of the contribution
 
 \begin{abstract}
-Haskell is a functional language, with features such as higher order functions and lazy evaluation, which allow succinct programs. These high-level features are difficult for fast execution, but GHC is a mature and widely used optimising compiler. This paper presents a whole-program approach to optimisation, using techniques from supercompilation, which produces speed improvements of up to 60\% when used with GHC, on fifteen benchmarks.
+Haskell is a functional language, with features such as higher order functions and lazy evaluation, which allow succinct programs. These high-level features present many challenges for optimising compilers. This paper presents a supercompilation based approach, which produces speed improvements of up to 40\% when used in conjunction with GHC. Our practical experiments have influenced a number of novel approaches to supercompilation, particularly with regards to let bindings and the generalisation technique.
 \end{abstract}
 
 \section{Introduction}
@@ -84,16 +86,16 @@ int main()
 \item[Laziness and Thunks] The Haskell program proceeds in a lazy manner, first demanding one character from |getContents|, then processing it with each of the functions in the pipeline. At each stage, a lazy thunk for the remainder of each function is created.
 \end{description}
 
-Using the optimiser developed in this paper we can eliminate all these overheads. We obtain a program that performs \textit{faster} than the C version. The central idea of the optimiser is taken from supercompilation: namely to evaluate as much of the program as possible at compile time, leaving a residual program consisting only of actions dependent on the input data.
+Using the optimiser developed in this paper we can eliminate all these overheads. We obtain a program that performs \textit{faster} than the C version. The optimiser is based around the techniques of supercompilation \cite{supercompilation}, where as much of the program as possible is evaluated at compile time, leaving a faster residual program. A perfect residual program would only perform actions directly related to the input data.
 
 Our goal is an automatic optimisation that makes high-level Haskell programs run as fast as low-level equivalents, eliminating the current need for hand-tuning and low-level techniques to obtain competitive performance. We require no annotations on any part of the program, including the library functions.
 
 \subsection{Contributions}
 
-This paper makes a number of contributions:
-
 \begin{itemize}
-\item To our knowledge, supercompilation techniques have not been applied to the full Haskell language previously.
+\item To our knowledge, this is the first time supercompilation has been applied to Haskell. This enables us to compare against GHC \cite{ghc}, a mature optimising compiler for Haskell.
+\item We make careful study of the let expression, something absent from the Core language of many other papers on supercompilation.
+\item We present an alternative generalisation step, based on a homeomorphic embedding \cite{leuschel:homeomorphic}.
 \end{itemize}
 
 \subsection{Roadmap}
@@ -108,8 +110,8 @@ We first introduce a Core language in \S\ref{sec:core}, on which all transformat
 expr  =  v                                          {-" \text{  variable} "-}
       |  c                                          {-" \text{  constructor} "-}
       |  f                                          {-" \text{  function} "-}
-      |  x y                                        {-" \text{  application} "-}
-      |  \v -> x                                    {-" \text{  lambda abstraction} "-}
+      |  x ys_                                      {-" \text{  application} "-}
+      |  \vs_ -> x                                  {-" \text{  lambda abstraction} "-}
       |  let v = x in y                             {-" \text{  let binding} "-}
       |  case x of {p_1 -> y_1 ; ... ; p_n -> y_n}  {-" \text{  case expression} "-}
 
@@ -138,6 +140,7 @@ Our optimisation procedure takes a Core program as input, and produces a new equ
 
 Each function in the output program is an optimised version of some associated expression in the input program. Optimisation starts at the |main| function, and optimises the expression associated with |main|. Once the expression has been optimised, the outermost element in the expression becomes part of the residual program. All the subexpressions are assigned names, and will be given definitions in the residual program. If any expression (up to alpha renaming) already has a name in the residual program, then the same name is used. Each of these named inner expressions is then optimised as before.
 
+\begin{comment}
 \begin{fig}
 \begin{code}
 _O\<case x of alts_  \> =  case _O\<x\> \? of alts_
@@ -153,6 +156,7 @@ _O\< \v -> x         \> =  \v -> x
 \caption{Optimisation rules.}
 \label{fig:optimise}
 \end{fig}
+\end{comment}
 
 \begin{fig}
 \begin{code}
@@ -201,6 +205,202 @@ let v = c x_1 ... x_n in y
 \label{fig:simplify}
 \end{fig}
 
+The optimisation of an expression proceeds by repeatedly inlining a function application until some termination criteria is met. Once the termination criteria holds, the expression is generalised before the outer shell becomes part of the residual program and all subexpressions are assigned names. After each inlining step, the expression is simplified using the rules in Figure \ref{fig:simplify}. There are three key decisions in the optimisation of an expression:
+
+\begin{enumerate}
+\item Which function to inline.
+\item What termination criteria to use.
+\item What generalisation to use.
+\end{enumerate}
+
+The original Supero work \cite{me:supero_ifl} always inlined the left-most inner-most function call, a bound on the size of the expression for termination, and the identity operation as the generalisation. First we give examples of our optimiser in use, then we examine each of the three choices we have made.
+
+\subsection{Examples of Optimisation}
+
+\subsubsection{Example 1: Specialisation}\hfill
+
+\begin{code}
+main as = map (\b -> b + 1) as
+
+map f cs = case  cs of
+                 []    -> []
+                 d:ds  -> f d : map f ds
+\end{code}
+
+There are two primary inefficiencies in this example: (1) the |map| function passes the |f| argument invariantly in every call; (2) the application of |f| is more expensive than if the function was known in advance.
+
+The optimisation proceeds by first assigning a new unique name (we choose |h0|) to |map (\b -> b + 1) as|, providing parameters for each of the free variables in the expression, namely |as|. We then choose to expand |map|, and invoke the simplification rules:
+
+\begin{code}
+map (\b -> b + 1) as = h0 as = case  as of
+                                     []    -> []
+                                     d:ds  -> d+1 : map (\b -> b + 1) ds
+\end{code}
+
+We now have a |case| with a variable as the scrutinee at the root of the expression, which cannot be optimised further, so we residuate the outer shell. When processing the expression |map (\b -> b + 1) ds| we spot this to be an alpha renaming of an existing generated function, namely |h0|, and use this function:
+
+\begin{code}
+h0 as = case  as of
+              []    -> []
+              d:ds  -> d+1 : h0 ds
+\end{code}
+
+We have now specialised the higher-order argument, passing less data at runtime.\noexample
+
+\subsubsection{Example 2: Deforestation}\hfill
+
+The deforestation transformation \cite{wadler:deforestation} removes intermediate lists from a traversal. Consider the operation of mapping |(+1)| over |map (*2)|. The first |map| deconstructs the list, and then reconstructs it. The second does the same.
+
+\begin{code}
+main as = map (\b -> b+1) (map (\c -> c*2) as)
+\end{code}
+
+We first assign a new name for the body of |main|, then choose to expand the outer call to |map|:
+
+\begin{code}
+h0 as = case  map (\c -> c*2) as of
+              []    -> []
+              d:ds  -> y+1 : map (\b -> b+1) ds
+\end{code}
+
+Next we choose to inline the |map| scrutinised by the case, then perform the |case|/|case| simplification, and finally residuate:
+
+\begin{code}
+h0 as = case  (case  as of
+                     []    -> []
+                     e:es  -> e*2 : map (\c -> c*2) es) of
+              []    -> []
+              d:ds  -> y+1 : map (\b -> b+1) ds
+
+h0 as = case  as of
+              []    -> []
+              d:ds  -> (y*2)+1 : map (\b -> b+1) (map (\c -> c*2) ds)
+
+h0 as = case  as of
+              []    -> []
+              d:ds  -> (y*2)+1 : h0 ds
+\end{code}
+
+Now the intermediate lists have been removed, and the higher-order arguments to |map| have both been specialised.  \noexample
+
+\subsection{Which function to inline}
+
+Given an expression under optimisation, at each step some function needs to be inlined -- leading to the question of which to choose. In most supercompilation work the choice is made following the runtime semantics of the program, however in a language with let expressions this may be inappropriate. If a function in a let binding is inlined, it may become simple enough to replace in the let body. If a function in a let body is inlined, the let body may now only refer to the let binding once, allowing the binding to be inlined. Let us take two expressions, based on intermediate steps obtained from real programs (wordcounting and prime number calculation respectively):
+
+\begin{tabular}{p{5cm}p{5cm}}
+\begin{code}
+let x = (==) $ 1
+in x 1 : map x ys
+\end{code}
+&
+\begin{code}
+let x = repeat 1
+in const 0 x : map f x
+\end{code}
+\end{tabular}
+
+In the first example, a single expansion of the let binding will result in |(\x -> 1 == x)|, which will be substituted for |x| producing |1 == 1 : map (\x -> 1 == x) ys| after simplification. Now |map| can be specialised appropriately. Expanding the |map| repeatedly would result in an infinite chain of function calls, and would be terminated without achieving specialisation.
+
+Taking the second example, unfolding |repeat| will not terminate. However, by unfolding the |const| we produce |let x = repeat 1 in 0 : map f x|. Since |x| is only used once we may replace it to produce |0 : map (+1) (repeat 1)|, which may be deforested appropriately.
+
+Unfortunately these two examples seem to suggest different strategies for unfolding - unfold the let binding or unfold the let body. However, they do have a common theme -- unfolding the function that \textit{terminates} first. We use the strategy of picking the left-most inner-most function that does \textit{not} cause the termination criteria to be invoked. If no such function exists, we simply revert to left-most inner-most.
+
+\subsection{The Termination Criteria}
+
+The original Supero program used a size bound on the expression to determine when to stop. The problem with a size bound is that different programs require different bounds to ensure timely completion at compile-time, and yet still produce sufficient optimisation. Indeed, within a single program, there may be different elements requiring different size bounds, a problem exacerbated as the size and complexity of a program increases.
+
+We use the termination criteria suggested by S{\o}rensen and Gl{\"u}ck \cite{sorensen:supercompilation} -- homeomorphic embedding. An expression $x$ is an embedding of $y$, written $x \unlhd y$, iff:
+
+\[x \unlhd y = \text{dive}(x,y) \vee \text{couple}(x,y)\]
+\vspace{-10mm}
+
+\noindent\begin{tabular}{p{5cm}p{5cm}}
+\[\text{dive}(x,y) = \frac{s \unlhd t_i \text{ for some } |i|}{s \unlhd \sigma(t_1,\ldots,t_n)} \]
+&
+\[\text{couple}(x,y) = \frac{\sigma_1 \stackrel{*}{=} \sigma_2,
+                            s_1 \unlhd t_1, \ldots , s_n \unlhd t_n}
+                            {\sigma_1 (s_1,\ldots,s_n) \unlhd \sigma_2 (t_1,\ldots,t_n)}
+\]
+\end{tabular}
+
+We use $\sigma$ to denote the shell of an expression, with $s_1,\ldots,s_n$ being its child expressions. We test for equality of $\sigma_1$ and $\sigma_2$ using $\stackrel{*}{=}$ -- equality where all variables are considered equal. We terminate the optimisation of an expression |y| if on the chain of reductions from |main| to |y| we have encountered an expression |x| such that $x \unlhd y$.
+
+In addition to using the homeomorphic embedding, we also terminate if further unfolding would not yield any improvement to the root of the expression. For example, if the root of an expression is a constructor application, no further unfolding will change the root constructor. When terminating for this reason, we always residuate the outer shell of the expression, without applying any generalisation.
+
+\subsection{Generalisation}
+
+When the termination criteria has been met, it is necessary to discard information about the current expression, so that the optimisation terminates. We always residuate the outer shell of the expression, but first we attempt to generalise the expression so that the information lost is minimal. The paper by S{\o}rensen and Gl{\"u}ck provides a method for generation, which works by taking the most specific generationalisation of the current term and that which matched a homeomorhpic embedding. We first show an example where their method fails to produce the ideal generalised version, then show our new method based on the driving/coupling distinction already present in the homeomorhpic embedding.
+
+\begin{code}
+case  putStr (repeat '1') of
+      (r, _) -> (r, ())
+\end{code}
+
+This fragment of code prints an infinite stream of 1's. The pairs and |r|'s correspond to the implementation of GHC's IO Monad \cite{spj:awkward_squad}. After several unrollings, we obtain:
+
+\begin{code}
+case  putChar '1' r of
+      (r, _) -> case  putStr (repeat '1') r of
+                      (r, _) -> (r, ())
+\end{code}
+
+The homeomorhpic embedding detects the repeated occurrence of |putStr|, and the optimisation of this expression is stopped. The most specific generalisation rule produces:
+
+\begin{code}
+let  f = putChar
+     x = '1'
+in case  f x r of
+         (r, _) -> case  putStr (repeat '1') r of
+                         (r, _) -> (r, ())
+\end{code}
+
+The problem is that the rule works from the top of both expressions looking for a common root of both trees. However, if the first rule applied was diving, the roots may be unrelated. Using our rule:
+
+\begin{code}
+let x = \r -> case  putStr (repeat '1') r of
+                    (r, _) -> (r, ())
+in case  putChar '1' r of
+         (r, _) -> x r
+\end{code}
+
+Our generalisation is superior as it has lifted the |putStr| operation out in a manner which leaves it identical to the original expression and can be tied back. The |putChar| function has not been altered, so can still be optimised in the context of the |case| expression.
+
+The most specific generalisation of two expressions $s$ and $t$, $\text{msg}(s,t)$, is produced by applying the following rewrite rule to triple $(x,\{x=s\},\{x=t\})$, resulting in a common expression and two sets of bindings.
+
+\[
+\left( \begin{array}{lcl}
+	t_g \\
+	\{x = \theta(s_1,\ldots,s_n)\} & \cup & \theta_1 \\
+	\{x = \theta(t_1,\ldots,t_n)\} & \cup & \theta_2
+	\end{array} \right)
+\rightarrow
+\left( \begin{array}{lcl}
+	t_g\{x = \theta(y_1,\ldots,y_n)\} \\
+	\{y_1 = s_1,\ldots,y_n = s_n\} & \cup & \theta_1 \\
+	\{y_1 = t_1,\ldots,y_n = t_n\} & \cup & \theta_2
+	\end{array} \right)
+\]
+
+Our generalisation is characterised by $x \bowtie y$ which produces an expression equivalent to $y$, but ideally more similar in structure to $x$ than before.
+
+\begin{code}
+{-" x \bowtie \sigma^*(y), \text{where dive}(x,\sigma^*(y)) \wedge \text{couple}(x,y) "-}
+        let f = \vs -> x in {-" \sigma^* "-}(f vs)
+        {-" \text{where } "-}vs{-" = \text{fv}(y) \ \text{fv}(\sigma^*(y)) "-}
+\end{code}
+
+\vspace{-2mm}
+
+\begin{code}
+{-" x \bowtie y, \text{where couple}(x,y) "-}
+        let {-" \theta_2 "-} in {-" t_g "-}
+        {-" \text{where }(t_g,\theta_1,\theta_2) = \text{msg}(x,y) "-}
+\end{code}
+
+The first rule applies if the homeomorphic embedding first applied the dive rule. The idea is to descend to the element which matched, and then promote this to the top-level using a lambda. The fv function in the first rule calculates the free variables in an expression, and $\sigma^*$ is a multi-level context. The second rule applies the most specific generalisation operation if the coupling rule was applied first.
+
+
+\begin{comment}
 Optimisation uses the |_O| rules in Figure \ref{fig:optimise}, and the simplification rules in Figure \ref{fig:simplify}. We define |_OO| to be the result of applying both |_O| and the simplification rules until no further changes are made. Optimisation is like evaluation, but stops if the expression to reduce is a free variable, a constructor, a primitive, or a CAF (constant applicative form -- see \S\ref{sec:caf} for more details). The one difference is that in a |let| expression the bound expression and the inner expression are \textit{both} optimised -- see \S\ref{sec:let} for the reasons. The simplification rules are all standard, and similar rules would be found in most optimising compilers.
 
 \subsubsection{Example 1} \hfill
@@ -359,6 +559,8 @@ main = caf + caf
 \end{code}
 
 In this program |caf| would only be computed once. If a CAF is inlined then this may result in a computation being performed more than would otherwise occur. To ensure that we do not duplicate computations, we never inline CAF's.
+
+\end{comment}
 
 \section{Performance Compared With C Programs}
 \label{sec:c_results}
@@ -537,37 +739,42 @@ For these benchmarks it is important to clarify which optimisations are performe
 
 Supero has no special purpose optimisations which rely on named functions or desugaring knowledge. The one benchmark where no GHC specific optimisations apply is exp3\_8, which operates solely on Peano numbers -- a type GHC has no inbuilt knowledge of. Hence the advantage of Supero in exp3\_8: while GHC is limited to basic inline/simplify transformations, Supero is able to remove some intermediate data structures.
 
+\begin{comment}
 \subsection{Termination Bound}
 \label{sec:results_bound}
 
 Table \ref{tab:haskell_results} includes a column indicating the size bound that was applied to expressions. Out of the five benchmarks, both primes and queens could be run at any greater bound and would still produce the same program -- the direct repetition criteria (see \S\ref{sec:direct}) bounds the expressions on its own. For the remaining programs, a bound was chosen to ensure that the compilation process was quick (under two seconds). By increasing the termination bound the size of the residual program would increase, but the generated program may execute faster.
 
 The existence of a termination bound requiring different values for different programs is a cause for concern. In a large program it is likely that different parts of the program would require different bounds on the size of the generated expression -- something not currently possible. We suspect that the most promising direction is to augment the direct repetition criterion to obtain termination in all practical cases without resorting to a depth bound.
+\end{comment}
 
 \section{Related Work}
 \label{sec:related}
 
-\paragraph{Partial evaluation} There has been a lot of work on partial evaluation \cite{jones:partial_evaluation}, where a program is specialised with respect to some static data. The emphasis is on determining which variable can be entirely computed at compile time, and which must remain in the residual program. Partial evaluation is particularly appropriate for specialising an interpreter with an expression tree to generate a compiler automatically, often with an order of magnitude speedup, known as the First Futamura Projection \cite{futanama:projections}. The difference between our work and partial evaluation is that we fold back definitions, and perform no binding time analysis. Our method is certainly less appropriate for specialising an interpreter, but in the absence of static data, is still able to show improvements.
+Supercompilation \cite{supercompilation,turchin:experiments} was introduced by Turchin for the Refal language. Since this original work, there have been various suggestions of both termination strategies and generalisation strategies \cite{turchin:generalisation}. The termination strategy we use is taken from \cite{sorensen:supercompilation} and is based on homeomorphic embedding \cite{leuschel:homeomorphic}. A standard supercompiler only maintains positive knowledge, but this can be extended with negative information \cite{secher:perfect_supercompilation}.
+
+The issue of let expressions in supercompilation has not previously been a primary focus. If lets are mentioned, the usual strategy is to substitute all linear lets and residuate all others. Let's have been considered in a strict setting \cite{jonsson:supercompilation}, where they are used to preserve termination semantics, but here all strict lets are inlined without regard to loss of sharing. It is known that the movement of lets can have dramatic impact on performance, providing an average speedup of 15\% in GHC \cite{spj:letfloating}, suggesting let expressions are critical to the performance of real programs.
+
+\paragraph{Partial evaluation} There has been a lot of work on partial evaluation \cite{jones:partial_evaluation}, where a program is specialised with respect to some static data. The emphasis is on determining which variable can be entirely computed at compile time, and which must remain in the residual program. Partial evaluation is particularly appropriate for specialising an interpreter with an expression tree to generate a compiler automatically, often with an order of magnitude speedup, known as the First Futamura Projection \cite{futanama:projections}. The difference between our work and partial evaluation is that we fold back definitions, and perform no binding time analysis. Our method is certainly less appropriate for specialising an interpreter, but in the absence of static data, is still able to show improvements. Partial evaluation has been applied to full-scale functional languages, such as Curry \cite{albert:partial_evaluation_curry}.
 
 \paragraph{Deforestation} The deforestation technique \cite{wadler:deforestation} removes intermediate lists in computations. This technique has been extended in many ways to encompass higher order deforestation \cite{marlow:higher_order_deforestation} and work on other data types \cite{coutts:string_fusion}. Probably the most practically motivated work on deforestation has come from those attempting to restrict deforestation, in particular shortcut deforestation \cite{gill:shortcut_deforestation}, and newer approaches such as stream fusion \cite{coutts:stream_fusion}. In this work certain named functions are automatically fused together. By rewriting library functions in terms of these special functions, fusion occurs. Shortcut deforestation is limited to cases where the correct underlying function is used -- sometimes requiring unnatural definitions.
 
+\begin{comment}
 \paragraph{GRIN} The GRIN approach \cite{grin} is currently being implemented in the jhc compiler \cite{jhc}, with promising initial results. GRIN works by first translating to a monadic intermediate language, then repeatedly performing a series of optimisations, using whole program transformation. The intermediate language is at a much lower level than our Core language, so jhc is able to perform detailed optimisations that we are unable to express.
 
 \paragraph{Other Transformations} One of the central operations within our optimisation in inlining, a technique that has been used extensively within GHC \cite{spj:inlining}. We generalise the constructor specialisation technique \cite{spj:specconstr}, by allowing specialisation on any arbitrary expression, including constructors.
 
-\begin{comment}
 One optimisation we do not currently support is the use of user provided transformation rules \cite{spj:rules}, which can be used to automatically replace certain expressions with others -- for example |sort . nub| removes duplicates then sorts a list, but can be done asymptotically faster in a single operation.
-\end{comment}
 
 \paragraph{Lower Level Optimisations} Our optimisation works at the Core level, but even once optimal Core has been generated there is still some work before optimal machine code can be produced. Key optimisations include strictness analysis and unboxing \cite{spj:unboxing}. In GHC both of these optimisations are done at the Core level, using a Core language extended with unboxed types. After this lower level Core has been generated, it is then transformed in to STG machine instructions \cite{spj:stg}, before being transformed into assembly code. There is still work being done to modify the lowest levels to take advantage of the current generation of microprocessors \cite{marlow:pointer_tagging}. We rely on GHC to perform all these optimisations after Supero generates a residual program.
+\end{comment}
 
 \section{Conclusions and Future Work}
 \label{sec:conclusion}
 
-We have introduced an optimising front-end which can enhance the results of back-end compilation using GHC -- at least for some small programs. Our optimiser is simple -- the Core transformation is expressed in just 300 lines of Haskell, yet it replicates many of the performance enhancements of GHC in a more general way. Our initial results are promising, but incomplete. There are three main obstacles that need to be tackled:
+We have introduced an optimising front-end which can enhance the results of back-end compilation using GHC -- at least for a small range of benchmarks. Our optimiser is simple -- the Core transformation is expressed in just 300 lines of Haskell, yet it replicates many of the performance enhancements of GHC in a more general way. We have modified some of the techniques from supercompilation, particularly in respect to let bindings. Our initial results are promising, but incomplete. There are three main obstacles that need to be tackled:
 
 \begin{description}
-\item[Termination] We are confident that Supero terminates, but only by use of a crude bound on expression size whose optimal value varies for different programs. To increase the applicability of our optimiser, we would like to remove the depth bound, or at least reduce our reliance upon it.
 \item[Benchmarks] Eight small benchmarks are not enough. We would like to obtain results for all the remaining benchmarks in the nofib suite.
 \item[Performance] The performance results presented in \S\ref{sec:haskell_results} are disappointing. Earlier versions of Supero were able to obtain a 50\% speed up in the primes benchmark, but decreased performance in other benchmarks. We suspect that much better performance can be obtained.
 \end{description}
