Fix up bits of the bibtex file

--- a/academic/post-ifl2007/supero.bib
+++ b/academic/post-ifl2007/supero.bib
@@ -544,7 +544,7 @@
     year      = "2007",
     month     = "September",
     day       = "27",
-    booktitle = "Proc. IFL 2007"
+    booktitle = "Proc. IFL 2007",
     _pdf       = "http://www-users.cs.york.ac.uk/\~{}ndm/downloads/paper-supero_making_haskell_faster-27_sep_2007.pdf",
 }
 
@@ -555,7 +555,7 @@
     year      = "2007",
     month     = "September",
     day       = "27",
-    booktitle = "Proc. IFL 2007"
+    booktitle = "Proc. IFL 2007",
     _pdf       = "http://www-users.cs.york.ac.uk/\~{}ndm/downloads/paper-supero_making_haskell_faster-27_sep_2007.pdf",
 }
 
@@ -881,10 +881,10 @@
  address = {London, UK},
  }
 
-@article{leuschel:homeomorphic,
+@inproceedings{leuschel:homeomorphic,
  author = {Michael Leuschel},
  title = {Homeomorphic embedding for online termination of symbolic methods},
- book = {The essence of computation: complexity, analysis, transformation},
+ booktitle = {The essence of computation: complexity, analysis, transformation},
  year = {2002},
  isbn = {3-540-00326-6},
  pages = {379--403},
@@ -1141,12 +1141,12 @@
  
 @inproceedings{turchin:generalisation,
     author = {V F Turchin},
-    title = {The Algorithm of Generalization in the Supercompiler}
-    editors = {A. P. Ershov, D. Bj{\o}rner, N. D. Jones}
-    booktitle = {Partial Evaluation and Mixed Copmutation}
-    pages={341--353}
-    publisher = {North-Holland}
-    year = {1988}
+    title = {The Algorithm of Generalization in the Supercompiler},
+    editors = {A. P. Ershov, D. Bj{\o}rner, N. D. Jones},
+    booktitle = {Partial Evaluation and Mixed Copmutation},
+    pages={341--353},
+    publisher = {North-Holland},
+    year = {1988},
 }
 
 
@@ -1196,14 +1196,14 @@
   year = "1995",
   url = "citeseer.ist.psu.edu/heine95algorithm.html" }
 
-@inproceedings{secher:perfect_supercompilation
+@inproceedings{secher:perfect_supercompilation,
   AUTHOR = {Secher, Jens Peter and S{\o}rensen, Morten Heine B.},
   YEAR = {2000},
   TITLE = {On Perfect Supercompilation},
   BOOKTITLE = {Proceedings of Perspectives of System Informatics},
   editor = {Bj{\o}rner, D. and Broy, M. and Zamulin, A.},
   publisher = {Springer-Verlag},
-  series = LNCS,
+  series = {LNCS},
   volume = 1755,
   pages = {113--127},
 }
